# Ultralytics Actions 🚀, AGPL-3.0 license

# Overview:
# This pyproject.toml file manages the build, packaging, and distribution of the Ultralytics Actions package.
# It defines essential project metadata, dependencies, and settings used to develop and deploy the package.

# Key Sections:
# - [build-system]: Specifies the build requirements and backend (e.g., setuptools, wheel).
# - [project]: Includes details like name, version, description, authors, dependencies and more.
# - [project.optional-dependencies]: Provides additional, optional packages for extended features.
# - [tool.*]: Configures settings for various tools (pytest, ruff, etc.) used in the project.

# Installation:
# The Ultralytics Actions package is primarily used as a GitHub Actions workflow.
# For development purposes, you can install the package in editable mode with: 'pip install -e .'
# This approach allows for real-time code modifications without the need for re-installation.

# Documentation:
# For comprehensive documentation and usage instructions, visit: https://github.com/ultralytics/actions

[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safevideo-actions"
dynamic = ["version"]
description = "SafeVideo Actions for GitHub automation and PR management."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "AGPL-3.0" }
keywords = [
    "github-actions",
    "ci-cd",
    "workflow-automation",
    "pull-request-automation",
    "code-review",
    "release-automation",
    "markdown-processing",
    "devops",
    "github-integration",
    "continuous-integration"
]
authors = [
    { name = "safevideo", email = "support@safevideo.com" },
]
maintainers = [
    { name = "SafeVideo AI", email = "support@safevideo.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Operating System :: OS Independent",
]

dependencies = [
    "requests>=2.26.0",
    "ruff>=0.1.6",
    "docformatter>=1.7.5",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
]

[project.urls]
"Homepage" = "https://safevideo.ai"
"Source" = "https://github.com/fcakyon/actions"
"Bug Reports" = "https://github.com/fcakyon/actions/issues"
"Changelog" = "https://github.com/fcakyon/actions/releases"

[project.scripts]
safevideo-actions-first-interaction = "actions.first_interaction:main"
safevideo-actions-summarize-pr = "actions.summarize_pr:main"
safevideo-actions-summarize-release = "actions.summarize_release:main"
safevideo-actions-update-markdown-code-blocks = "actions.update_markdown_code_blocks:main"
safevideo-actions-info = "actions.utils:ultralytics_actions_info"

[tool.setuptools]
packages = { find = { where = ["."], include = ["actions", "actions.*"] } }

[tool.setuptools.dynamic]
version = { attr = "actions.__version__" }
